--- a/Packages/repositories.config
+++ b/Packages/repositories.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <repositories>
+  <repository path="..\Solutions\Endjin.Licensing.Specs.Net4\packages.config" />
   <repository path="..\Solutions\Endjin.Licensing.Specs\packages.config" />
 </repositories>
