Update file name Add support for the license being signed with SHA256

--- a/Solutions/Endjin.Licensing.Infrastructure.Net4/Endjin.Licensing.Infrastructure.Net4.csproj
+++ b/Solutions/Endjin.Licensing.Infrastructure.Net4/Endjin.Licensing.Infrastructure.Net4.csproj
@@ -57,6 +57,9 @@
     <Compile Include="..\Endjin.Licensing.Infrastructure\Crypto\PrivateCryptoKey.cs">
       <Link>Crypto\PrivateCryptoKey.cs</Link>
     </Compile>
+    <Compile Include="..\Endjin.Licensing.Infrastructure\Crypto\RSAPKCS1SHA256SignatureDescription.cs">
+      <Link>Crypto\RSAPKCS1SHA256SignatureDescription.cs</Link>
+    </Compile>
     <Compile Include="..\Endjin.Licensing.Infrastructure\Crypto\RsaPrivateKeyProvider.cs">
       <Link>Crypto\RsaPrivateKeyProvider.cs</Link>
     </Compile>
